News UAT/force-app/main/default/objects/Task__x/Task__x.object-meta.xml
<CustomObject>
    <externalDataSource>ARMuat</externalDataSource>
    <externalName>Task</externalName>
    <label>NRM Task</label>
    <pluralLabel>NRM Tasks</pluralLabel>
</CustomObject>