News UAT/force-app/main/default/objects/Task__x/fields/A_Proposal_was_presented_c__c.field-meta.xml
<CustomField>
    <fullName>A_Proposal_was_presented_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>A_Proposal_was_presented__c</externalDeveloperName>
    <label>Proposal Presented</label>
    <type>Checkbox</type>
</CustomField>