News UAT/force-app/main/default/objects/Task__x/fields/Activity_category_c__c.field-meta.xml
<CustomField>
    <fullName>Activity_category_c__c</fullName>
    <externalDeveloperName>Activity_category__c</externalDeveloperName>
    <label>Activity category</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>