News UAT/force-app/main/default/objects/Task__x/fields/Activity_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type_c__c</fullName>
    <externalDeveloperName>Activity_Type__c</externalDeveloperName>
    <label>Activity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>