News UAT/force-app/main/default/objects/Task__x/fields/Advertising_Elsewhere_Details_c__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Elsewhere_Details_c__c</fullName>
    <externalDeveloperName>Advertising_Elsewhere_Details__c</externalDeveloperName>
    <label>Advertising Elsewhere Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead Referral - Hi Pages</fullName>
            </value>
            <value>
                <fullName>Lead Referral - Service Seeking</fullName>
            </value>
            <value>
                <fullName>Lead Referral - One Flare</fullName>
            </value>
            <value>
                <fullName>Lead Referral - Other</fullName>
            </value>
            <value>
                <fullName>Online - Facebook Page</fullName>
            </value>
            <value>
                <fullName>Online - Facebook Advertising (Paid)</fullName>
            </value>
            <value>
                <fullName>Online - Gumtree</fullName>
            </value>
            <value>
                <fullName>Online - Google Business Profile</fullName>
            </value>
            <value>
                <fullName>Online - SEM (AdWords)</fullName>
            </value>
            <value>
                <fullName>Online - True Local</fullName>
            </value>
            <value>
                <fullName>Online - Own Website</fullName>
            </value>
            <value>
                <fullName>Online - Yellow Pages</fullName>
            </value>
            <value>
                <fullName>Online - Other</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Print - Flyers/Letterbox Drops</fullName>
            </value>
            <value>
                <fullName>Print - Local Directories</fullName>
            </value>
            <value>
                <fullName>Print - Competitor Newspapers</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>