News UAT/force-app/main/default/objects/Task__x/fields/APN_Activity_Status_c__c.field-meta.xml
<CustomField>
    <fullName>APN_Activity_Status_c__c</fullName>
    <externalDeveloperName>APN_Activity_Status__c</externalDeveloperName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>System Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>