News UAT/force-app/main/default/objects/Task__x/fields/APN_Task_Status1_c__c.field-meta.xml
<CustomField>
    <fullName>APN_Task_Status1_c__c</fullName>
    <externalDeveloperName>APN_Task_Status1__c</externalDeveloperName>
    <label>Task Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>