News UAT/force-app/main/default/objects/Task__x/fields/Assigned_To_Full_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Full_Name_c__c</fullName>
    <externalDeveloperName>Assigned_To_Full_Name__c</externalDeveloperName>
    <label>Assigned To Full Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>