News UAT/force-app/main/default/objects/Task__x/fields/Call_Result_Subscription_c__c.field-meta.xml
<CustomField>
    <fullName>Call_Result_Subscription_c__c</fullName>
    <externalDeveloperName>Call_Result_Subscription__c</externalDeveloperName>
    <label>XXXCall Result (Subscription)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Hang up</fullName>
            </value>
            <value>
                <fullName>No answer</fullName>
            </value>
            <value>
                <fullName>Call me back</fullName>
            </value>
            <value>
                <fullName>Disqualified (current 7 day subscriber)</fullName>
            </value>
            <value>
                <fullName>Do not contact me again</fullName>
            </value>
            <value>
                <fullName>No interest</fullName>
            </value>
            <value>
                <fullName>NSM to call customer (see comments)</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>