News UAT/force-app/main/default/objects/Task__x/fields/CallDisposition__c.field-meta.xml
<CustomField>
    <fullName>CallDisposition__c</fullName>
    <externalDeveloperName>CallDisposition</externalDeveloperName>
    <label>Call Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>