News UAT/force-app/main/default/objects/Task__x/fields/CallObject__c.field-meta.xml
<CustomField>
    <fullName>CallObject__c</fullName>
    <externalDeveloperName>CallObject</externalDeveloperName>
    <label>Call Object Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>