News UAT/force-app/main/default/objects/Task__x/fields/Client_Company_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Client_Company_Name_c__c</fullName>
    <externalDeveloperName>Client_Company_Name__c</externalDeveloperName>
    <label>Company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>