News UAT/force-app/main/default/objects/Task__x/fields/Closed_c__c.field-meta.xml
<CustomField>
    <fullName>Closed_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Closed__c</externalDeveloperName>
    <label>Closed?</label>
    <type>Checkbox</type>
</CustomField>