News UAT/force-app/main/default/objects/Task__x/fields/Completed_By_c__c.field-meta.xml
<CustomField>
    <fullName>Completed_By_c__c</fullName>
    <externalDeveloperName>Completed_By__c</externalDeveloperName>
    <label>Completed By Date</label>
    <type>Date</type>
</CustomField>