News UAT/force-app/main/default/objects/Task__x/fields/Created_from_Opportunity_c__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Opportunity_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Created_from_Opportunity__c</externalDeveloperName>
    <label>Created from Opportunity</label>
    <type>Checkbox</type>
</CustomField>