News UAT/force-app/main/default/objects/Task__x/fields/Current_Fiscal_Week_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Week_c__c</fullName>
    <externalDeveloperName>Current_Fiscal_Week__c</externalDeveloperName>
    <label>Current Fiscal Week</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>