News UAT/force-app/main/default/objects/Task__x/fields/Current_Yield_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Yield_c__c</fullName>
    <externalDeveloperName>Current_Yield__c</externalDeveloperName>
    <label>Current Yield</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>