News UAT/force-app/main/default/objects/Task__x/fields/DB_Activity_Type_c_c__c.field-meta.xml
<CustomField>
    <fullName>DB_Activity_Type_c_c__c</fullName>
    <externalDeveloperName>DB_Activity_Type_c__c</externalDeveloperName>
    <label>1DB Activity Type</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>