News UAT/force-app/main/default/objects/Task__x/fields/DMS_Appointment_Made_c__c.field-meta.xml
<CustomField>
    <fullName>DMS_Appointment_Made_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>DMS_Appointment_Made__c</externalDeveloperName>
    <label>DMS Appointment Made</label>
    <type>Checkbox</type>
</CustomField>