News UAT/force-app/main/default/objects/Task__x/fields/Interested_in_the_following_products_c__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_the_following_products_c__c</fullName>
    <externalDeveloperName>Interested_in_the_following_products__c</externalDeveloperName>
    <label>Interested in the following products?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising - Facebook Advertising</fullName>
            </value>
            <value>
                <fullName>Advertising - SEM (AdWords)</fullName>
            </value>
            <value>
                <fullName>Advertising - SEO (Search Engine Optimisation)</fullName>
            </value>
            <value>
                <fullName>Advertising - Local Directories</fullName>
            </value>
            <value>
                <fullName>Advertising - Letterbox Drops</fullName>
            </value>
            <value>
                <fullName>Advertising - Video Production</fullName>
            </value>
            <value>
                <fullName>Printing - Business Cards</fullName>
            </value>
            <value>
                <fullName>Printing - Coupons/Flyers</fullName>
            </value>
            <value>
                <fullName>Printing - Stationary</fullName>
            </value>
            <value>
                <fullName>Printing - Stickers/Decals</fullName>
            </value>
            <value>
                <fullName>Other - Accounting Software (e.g. MYOB)</fullName>
            </value>
            <value>
                <fullName>Other - Job Management Software</fullName>
            </value>
            <value>
                <fullName>Other - Insurance</fullName>
            </value>
            <value>
                <fullName>Other - OHS legislation information</fullName>
            </value>
            <value>
                <fullName>Other - legal advice</fullName>
            </value>
            <value>
                <fullName>Other - training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>