News UAT/force-app/main/default/objects/Task__x/fields/IsReminderSet__c.field-meta.xml
<CustomField>
    <fullName>IsReminderSet__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsReminderSet</externalDeveloperName>
    <label>Reminder Set</label>
    <type>Checkbox</type>
</CustomField>