News UAT/force-app/main/default/objects/Task__x/fields/Last_Insertion_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Insertion_Date_c__c</fullName>
    <externalDeveloperName>Last_Insertion_Date__c</externalDeveloperName>
    <label>Last Insertion Date</label>
    <type>Date</type>
</CustomField>