News UAT/force-app/main/default/objects/Task__x/fields/Month_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Month_Start_Date_c__c</fullName>
    <externalDeveloperName>Month_Start_Date__c</externalDeveloperName>
    <label>Month Start Date</label>
    <type>Date</type>
</CustomField>