News UAT/force-app/main/default/objects/Task__x/fields/My_Activities_c__c.field-meta.xml
<CustomField>
    <fullName>My_Activities_c__c</fullName>
    <externalDeveloperName>My_Activities__c</externalDeveloperName>
    <label>My Activities</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>