News UAT/force-app/main/default/objects/Task__x/fields/No_Interest_Count_c__c.field-meta.xml
<CustomField>
    <fullName>No_Interest_Count_c__c</fullName>
    <externalDeveloperName>No_Interest_Count__c</externalDeveloperName>
    <label>No Interest Call Result Count</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>