News UAT/force-app/main/default/objects/Task__x/fields/NZMAG_ID_c__c.field-meta.xml
<CustomField>
    <fullName>NZMAG_ID_c__c</fullName>
    <externalDeveloperName>NZMAG_ID__c</externalDeveloperName>
    <label>NZMAG SFDC ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>