News UAT/force-app/main/default/objects/Task__x/fields/Owner_Department_c__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department_c__c</fullName>
    <externalDeveloperName>Owner_Department__c</externalDeveloperName>
    <label>Owner Department</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>