News UAT/force-app/main/default/objects/Task__x/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <externalDeveloperName>OwnerId</externalDeveloperName>
    <label>Assigned To ID</label>
    <length>18</length>
    <referenceTo>User__x</referenceTo>
    <relationshipLabel>NRM Tasks</relationshipLabel>
    <relationshipName>NRM_Tasks</relationshipName>
    <type>ExternalLookup</type>
</CustomField>