News UAT/force-app/main/default/objects/Task__x/fields/Reason_not_advertising_with_ARM_c__c.field-meta.xml
<CustomField>
    <fullName>Reason_not_advertising_with_ARM_c__c</fullName>
    <externalDeveloperName>Reason_not_advertising_with_ARM__c</externalDeveloperName>
    <label>Reason not advertising with ARM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business closed/retired</fullName>
            </value>
            <value>
                <fullName>Established business - has enough from word of mouth or repeat clients</fullName>
            </value>
            <value>
                <fullName>Established business - unwilling to expand business, happy with current workload and income</fullName>
            </value>
            <value>
                <fullName>Franchise - unable to advertise</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>No longer sole trader/working for someone else</fullName>
            </value>
            <value>
                <fullName>No reason/disengaged client</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Advertising elsewhere (please provide details)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>