News UAT/force-app/main/default/objects/Task__x/fields/RecurrenceActivityId__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceActivityId__c</fullName>
    <externalDeveloperName>RecurrenceActivityId</externalDeveloperName>
    <label>Recurrence Activity ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>