News UAT/force-app/main/default/objects/Task__x/fields/RecurrenceDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceDayOfMonth__c</fullName>
    <externalDeveloperName>RecurrenceDayOfMonth</externalDeveloperName>
    <label>Recurrence Day of Month</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>