News UAT/force-app/main/default/objects/Task__x/fields/RecurrenceInterval__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceInterval__c</fullName>
    <externalDeveloperName>RecurrenceInterval</externalDeveloperName>
    <label>Recurrence Interval</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>