News UAT/force-app/main/default/objects/Task__x/fields/RecurrenceRegeneratedType__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceRegeneratedType__c</fullName>
    <externalDeveloperName>RecurrenceRegeneratedType</externalDeveloperName>
    <label>Repeat This Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RecurrenceRegenerateAfterDueDate</fullName>
            </value>
            <value>
                <fullName>RecurrenceRegenerateAfterToday</fullName>
            </value>
            <value>
                <fullName>RecurrenceRegenerated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>