News UAT/force-app/main/default/objects/Task__x/fields/RecurrenceStartDateOnly__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceStartDateOnly__c</fullName>
    <externalDeveloperName>RecurrenceStartDateOnly</externalDeveloperName>
    <label>Recurrence Start</label>
    <type>Date</type>
</CustomField>