News UAT/force-app/main/default/objects/Task__x/fields/RelatedtoCampaign_c__c.field-meta.xml
<CustomField>
    <fullName>RelatedtoCampaign_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>RelatedtoCampaign__c</externalDeveloperName>
    <label>RelatedtoCampaign</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>