News UAT/force-app/main/default/objects/Task__x/fields/Revenue_LY_c__c.field-meta.xml
<CustomField>
    <fullName>Revenue_LY_c__c</fullName>
    <externalDeveloperName>Revenue_LY__c</externalDeveloperName>
    <label>Revenue LY</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>