News UAT/force-app/main/default/objects/Task__x/fields/Sale_Count_c__c.field-meta.xml
<CustomField>
    <fullName>Sale_Count_c__c</fullName>
    <externalDeveloperName>Sale_Count__c</externalDeveloperName>
    <label>Sale Call Result Count</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>