News UAT/force-app/main/default/objects/Task__x/fields/sc_user_id_c__c.field-meta.xml
<CustomField>
    <fullName>sc_user_id_c__c</fullName>
    <externalDeveloperName>sc_user_id__c</externalDeveloperName>
    <label>sc_user_id</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>