News UAT/force-app/main/default/objects/Task__x/fields/Site_c__c.field-meta.xml
<CustomField>
    <fullName>Site_c__c</fullName>
    <externalDeveloperName>Site__c</externalDeveloperName>
    <label>Site</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>