News UAT/force-app/main/default/objects/Task__x/fields/Special_Delivery_Details_c__c.field-meta.xml
<CustomField>
    <fullName>Special_Delivery_Details_c__c</fullName>
    <externalDeveloperName>Special_Delivery_Details__c</externalDeveloperName>
    <label>XXXSpecial Delivery Details</label>
    <type>TextArea</type>
</CustomField>