News UAT/force-app/main/default/objects/Task__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <externalDeveloperName>Status</externalDeveloperName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>System Close</fullName>
            </value>
            <value>
                <fullName>Console</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>