News UAT/force-app/main/default/objects/Task__x/fields/Sub_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_c__c</fullName>
    <externalDeveloperName>Sub_Type__c</externalDeveloperName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appraisals</fullName>
            </value>
            <value>
                <fullName>Bookings</fullName>
            </value>
            <value>
                <fullName>Cold call</fullName>
            </value>
            <value>
                <fullName>Proposal/Email/Fax follow up</fullName>
            </value>
            <value>
                <fullName>Proposals</fullName>
            </value>
            <value>
                <fullName>Quotes</fullName>
            </value>
            <value>
                <fullName>Re-solicitation</fullName>
            </value>
            <value>
                <fullName>Up-sell/cross sell</fullName>
            </value>
            <value>
                <fullName>Warm calls</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>