News UAT/force-app/main/default/objects/Task__x/fields/TaskSubtype__c.field-meta.xml
<CustomField>
    <fullName>TaskSubtype__c</fullName>
    <externalDeveloperName>TaskSubtype</externalDeveloperName>
    <label>Task Subtype</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>