News UAT/force-app/main/default/objects/Task__x/fields/Time_activity_created_c__c.field-meta.xml
<CustomField>
    <fullName>Time_activity_created_c__c</fullName>
    <externalDeveloperName>Time_activity_created__c</externalDeveloperName>
    <label>Time activity created</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>