News UAT/force-app/main/default/objects/Task__x/fields/WhatCount__c.field-meta.xml
<CustomField>
    <fullName>WhatCount__c</fullName>
    <externalDeveloperName>WhatCount</externalDeveloperName>
    <label>Related To Count</label>
    <precision>9</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>