News UAT/force-app/main/default/objects/Task__x/fields/WhoCount__c.field-meta.xml
<CustomField>
    <fullName>WhoCount__c</fullName>
    <externalDeveloperName>WhoCount</externalDeveloperName>
    <label>Relation Count</label>
    <precision>9</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>