News UAT/force-app/main/default/objects/Task__x/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <externalDeveloperName>WhoId</externalDeveloperName>
    <label>Client Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>