News UAT/force-app/main/default/objects/Task__x/fields/Wrap_Up_Code_Included_in_SIS_c__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Up_Code_Included_in_SIS_c__c</fullName>
    <externalDeveloperName>Wrap_Up_Code_Included_in_SIS__c</externalDeveloperName>
    <label>Wrap-Up Code Included in SIS</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>