News UAT/force-app/main/default/objects/Task__x/fields/Yield_Prior_to_Agreement_c__c.field-meta.xml
<CustomField>
    <fullName>Yield_Prior_to_Agreement_c__c</fullName>
    <externalDeveloperName>Yield_Prior_to_Agreement__c</externalDeveloperName>
    <label>Yield Prior to Agreement</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>